[tool.poetry]
name = "datahub-exp"
version = "0.1.0"
description = ""
authors = ["Danila Balaabaev <shattenjagger@yandex.ru>"]
readme = "README.md"
packages = [{include = "datahub_exp"}]

[tool.poetry.dependencies]
python = "^3.10"
acryl-datahub = "^0.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
